[gd_scene load_steps=32 format=3 uid="uid://dauj0oyj1t0b2"]

[ext_resource type="Script" path="res://scenes/world/map/player/player.gd" id="1_bxp6j"]
[ext_resource type="PackedScene" uid="uid://bsdy5aoth4sgb" path="res://scenes/world/map/player/camera/ortho_camera_3d.tscn" id="2_xv0sh"]
[ext_resource type="Texture2D" uid="uid://xlfh2wh620xl" path="res://resources/sprites/rolus_sprites/rolus_sit_1.png" id="3_ru3af"]
[ext_resource type="Texture2D" uid="uid://cetl5d4uy2vml" path="res://resources/sprites/rolus_sprites/rolus_sit_2.png" id="4_cxujx"]
[ext_resource type="Texture2D" uid="uid://dehbf40xwkfot" path="res://resources/sprites/rolus_sprites/rolus_sit_3.png" id="5_f8282"]
[ext_resource type="Texture2D" uid="uid://bsltx0a3vxp5i" path="res://resources/sprites/rolus_sprites/rolus_still_down.png" id="6_ol35h"]
[ext_resource type="Texture2D" uid="uid://0yj4gvr1fs8" path="res://resources/sprites/rolus_sprites/rolus_still_side.png" id="7_ncyy8"]
[ext_resource type="Texture2D" uid="uid://cap7gkhuyisat" path="res://resources/sprites/rolus_sprites/rolus_still_up.png" id="8_u2f5e"]
[ext_resource type="Texture2D" uid="uid://c347rq8nbdopx" path="res://resources/sprites/rolus_sprites/rolus_walk_down_1.png" id="9_qnewu"]
[ext_resource type="Texture2D" uid="uid://5i3rw8cangos" path="res://resources/sprites/rolus_sprites/rolus_walk_down_2.png" id="10_o8jih"]
[ext_resource type="Texture2D" uid="uid://40al4reghvrf" path="res://resources/sprites/rolus_sprites/rolus_walk_down_3.png" id="11_0d7wl"]
[ext_resource type="Texture2D" uid="uid://c4fpyuhtfu63c" path="res://resources/sprites/rolus_sprites/rolus_walk_down_4.png" id="12_crs0v"]
[ext_resource type="Texture2D" uid="uid://n4geonapeuk" path="res://resources/sprites/rolus_sprites/rolus_walk_side_1.png" id="13_6amel"]
[ext_resource type="Texture2D" uid="uid://b7u7v6w73wsyt" path="res://resources/sprites/rolus_sprites/rolus_walk_side_2.png" id="14_cubi0"]
[ext_resource type="Texture2D" uid="uid://cbgfecudvslq4" path="res://resources/sprites/rolus_sprites/rolus_walk_side_3.png" id="15_5257q"]
[ext_resource type="Texture2D" uid="uid://bwjj1j4by2wal" path="res://resources/sprites/rolus_sprites/rolus_walk_side_4.png" id="16_o1j24"]
[ext_resource type="Texture2D" uid="uid://b7nlraa5yfvrr" path="res://resources/sprites/rolus_sprites/rolus_walk_up_1.png" id="17_1qufs"]
[ext_resource type="Texture2D" uid="uid://dgo17wnb43p3v" path="res://resources/sprites/rolus_sprites/rolus_walk_up_2.png" id="18_8fql0"]
[ext_resource type="Texture2D" uid="uid://baca4dhmyusgb" path="res://resources/sprites/rolus_sprites/rolus_walk_up_3.png" id="19_vnqjv"]
[ext_resource type="Texture2D" uid="uid://d1na64qpvsed7" path="res://resources/sprites/rolus_sprites/rolus_walk_up_4.png" id="20_wjyf6"]
[ext_resource type="Script" path="res://scenes/world/map/player/States/StateMachine.gd" id="21_5nbe6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ubx6w"]
animations = [{
"frames": [{
"duration": 18.0,
"texture": ExtResource("3_ru3af")
}, {
"duration": 1.0,
"texture": ExtResource("4_cxujx")
}, {
"duration": 1.0,
"texture": ExtResource("5_f8282")
}],
"loop": true,
"name": &"sit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ol35h")
}],
"loop": true,
"name": &"still_down",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ncyy8")
}],
"loop": true,
"name": &"still_side",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_u2f5e")
}],
"loop": true,
"name": &"still_up",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_qnewu")
}, {
"duration": 1.0,
"texture": ExtResource("10_o8jih")
}, {
"duration": 1.0,
"texture": ExtResource("11_0d7wl")
}, {
"duration": 1.0,
"texture": ExtResource("12_crs0v")
}],
"loop": true,
"name": &"walk_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_6amel")
}, {
"duration": 1.0,
"texture": ExtResource("14_cubi0")
}, {
"duration": 1.0,
"texture": ExtResource("15_5257q")
}, {
"duration": 1.0,
"texture": ExtResource("16_o1j24")
}],
"loop": true,
"name": &"walk_side",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_1qufs")
}, {
"duration": 1.0,
"texture": ExtResource("18_8fql0")
}, {
"duration": 1.0,
"texture": ExtResource("19_vnqjv")
}, {
"duration": 1.0,
"texture": ExtResource("20_wjyf6")
}],
"loop": true,
"name": &"walk_up",
"speed": 8.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mh35l"]
radius = 0.485
height = 1.65

[sub_resource type="Animation" id="Animation_msh8c"]
length = 1.66667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 1.58333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["sit"]
}

[sub_resource type="Animation" id="Animation_8wxyx"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["still_down"]
}

[sub_resource type="Animation" id="Animation_4o6k6"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["still_side"]
}

[sub_resource type="Animation" id="Animation_7rh67"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["still_up"]
}

[sub_resource type="Animation" id="Animation_nybnx"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["walk_down"]
}

[sub_resource type="Animation" id="Animation_6lh5k"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["walk_side"]
}

[sub_resource type="Animation" id="Animation_67s2c"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["walk_up"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ce1p"]
_data = {
"sit": SubResource("Animation_msh8c"),
"still_down": SubResource("Animation_8wxyx"),
"still_side": SubResource("Animation_4o6k6"),
"still_up": SubResource("Animation_7rh67"),
"walk_down": SubResource("Animation_nybnx"),
"walk_side": SubResource("Animation_6lh5k"),
"walk_up": SubResource("Animation_67s2c")
}

[node name="TopdownPlayer3D" type="CharacterBody3D"]
script = ExtResource("1_bxp6j")

[node name="OrthoCamera3D" parent="." instance=ExtResource("2_xv0sh")]
camera_follow_speed = 1.0

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.999922, 0)
offset = Vector2(0, -25)
billboard = 1
alpha_cut = 1
texture_filter = 5
sprite_frames = SubResource("SpriteFrames_ubx6w")
animation = &"sit"
autoplay = "still_down"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.835887, 0)
shape = SubResource("CapsuleShape3D_mh35l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ce1p")
}
autoplay = "still_down"

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("21_5nbe6")

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
